gccida/c3/set_mem_alias_set
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2333:1: error: use of undeclared identifier '_OWORD'
_OWORD *v16; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2333:9: error: use of undeclared identifier 'v16'
_OWORD *v16; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2339:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)mem[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2375:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)mem[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2406:1: error: use of undeclared identifier 'v16'
v16 = ggc_alloc( 0x28uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2407:9: error: use of undeclared identifier 'v16'
*slot = v16; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2408:15: error: use of undeclared identifier 'v16'
*( ( _QWORD *)v16 + 4) = v20; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2409:18: error: expected expression
v17 = *( _OWORD *)arg0; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2409:10: error: use of undeclared identifier '_OWORD'
v17 = *( _OWORD *)arg0; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2410:1: error: use of undeclared identifier 'v16'; did you mean 'v14'?
v16[1] = v19; 
^~~
v14
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2331:7: note: 'v14' declared here
void *v14; // rax 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2410:8: error: incomplete type 'void' is not assignable
v16[1] = v19; 
~~~~~~ ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2411:2: error: use of undeclared identifier 'v16'; did you mean 'v14'?
*v16 = v17; 
 ^~~
 v14
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2331:7: note: 'v14' declared here
void *v14; // rax 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/emit-rtl.c:2411:6: error: incomplete type 'void' is not assignable
*v16 = v17; 
~~~~ ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/set_mem_alias_set/src/obj/emit-rtl.o] Error 1
